# profile-management

./: .dockerignore  .gitignore  pyproject.toml  pyrightconfig.json  web_project.toml
.agents/: AGENTS.md
.github/workflows/: deploy_frontend.yml
deployments/desktop/: build.sh
deployments/mobile/: build.sh
deployments/web/: DEPLOYMENT_GUIDE_FOR_WEB.MD  Dockerfile  build.sh  vercel.json
docs/: README.md
docs/01_design_patterns/: DESIGN_PATTERNS_STRUCT_HELPER.md
docs/02_architecture/: ARCHITECTURE_RULES.md  DESIGN_PROCESS.md
scripts/: __init__.py
scripts/run/desktop/: run_profile_management.py
scripts/util_dev/: check_imports.py  directory_checker.py  migrate_protocol_and_logging.py  rename_module.py  setup_env.py
scripts/util_dev/docs/: README.md
scripts/util_dev/project_manager_app/: README.md  project_manager_app_gui_ai.md
src/: config.py
src/layer_01_entities/: __init__.py  audit_log.py  document.py  profile.py  profile_template.py  user.py
src/layer_02_usecases/gateways_interface/: i_checkin_document_repository.py  i_checkout_document_repository.py  i_create_profile_repository.py  i_create_profile_template_repository.py  i_generate_document_from_template_repository.py  i_update_profile_repository.py
src/layer_05_bootstrap/: app_context_base.py  app_context_desktop.py  app_context_web.py  di_container.py
tests/integration/: test_checkin_document_flow.py  test_checkout_document_flow.py  test_create_profile_flow.py  test_create_profile_template_flow.py  test_generate_document_from_template_flow.py  test_update_profile_flow.py
(+530 files in other folders)
