[tool.poetry]
name = "python-clean-architecture-kit"
version = "0.1.0"
description = "A production-ready Clean Architecture scaffolder and template kit for Python applications."
authors = ["Your Name <email>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pymongo = "^4.6.0"
redis = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"